# sql-workbench

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
scripts/: dev.sh
systemd/: sql-workbench.service
