[package]
name = "sql-workbench-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
tokio = { version = "1.53.1", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "fs"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
